--- a/cliente/public/index.html
+++ b/cliente/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="https://unpkg.com/prismjs/themes/prism.css" />
 
   <title>Teoría de Grafos</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 </head>
 
 <body>
